@startuml decoratorMONE
!theme plain
skinparam linetype ortho

interface IRouteData <<interface>> {
  + getDistance(): number
  + getDistanceUnit(): DistanceUnit
  + getDuration(): number
  + getMobilityType(): string
  + getRouteType(): string
  + getSteps(): string[]
  + getConsumptionValue(): number | null
  + getConsumptionUnit(): ConsumptionUnit | null
  + getCost(): number
  + getCostCurrency(): string
}

class Route implements IRouteData {
  - distanceMeters: number
  - durationMinutes: number
  - cost: number
  - consumptionPer100Km: number | null
  - consumptionUnit: ConsumptionUnit | null
  + getDistance()
  + getDuration()
  + getCost()
  + getConsumptionValue()
}

abstract class RouteDecorator implements IRouteData {
  # route: IRouteData
  + getDistance()
  + getDuration()
  + getCost()
  + getConsumptionValue()
  + getConsumptionUnit()
}

class DistanceUnitDecorator {
  - preferredUnit: DistanceUnit
  + getDistance(): number
  + getDistanceUnit(): DistanceUnit
}

class ConsumptionUnitDecorator {
  - preferredUnit: ConsumptionUnit
  + getConsumptionValue(): number | null
  + getConsumptionUnit(): ConsumptionUnit | null
}

class CostEstimatorDecorator {
  - priceSnapshot: PriceSnapshot
  + getCost(): number
  + getCostCurrency(): string
}

class RouteFacade {
  + requestRoute(): RouteResponse
}

RouteDecorator *-- IRouteData
RouteDecorator <|-- DistanceUnitDecorator
RouteDecorator <|-- ConsumptionUnitDecorator
RouteDecorator <|-- CostEstimatorDecorator
RouteFacade --> IRouteData


@enduml
